feat(swagger): add swagger comment, user & post
